--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,18 @@
 {% load bootstrap5 %}
 
 {% block content %}
+
+
+  {% comment %} Alert Bootstrap: Message de succès et d'erreur {% endcomment %} 
+  {% for message in messages %}
+    {% if message.tags == 'success' %}
+      <div class="alert alert-success" role="alert">{{ message }}</div>
+    {% elif message.tags == 'error' %}
+      <div class="alert alert-danger" role="alert">{{ message }}</div>
+    {% endif %} 
+  {% endfor %} 
+
+  
 <!-- ======= Hero Section ======= -->
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
   <div class="hero-container" data-aos="fade-in">
@@ -16,58 +28,44 @@
   <section id="about" class="about">
     <div class="container">
 
-      <div class="section-title">
-        <h2>About</h2>
-        {% comment %} <p>Magnam dolores com modi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> {% endcomment %}
-        <p>{{about.description}}</p>
-      </div>
+        <div class="section-title">
+          <h2>About</h2>
+          <p>{{about.description}}</p>
+        </div>
 
-      <div class="row">
-        <div class="col-lg-4" data-aos="fade-right">
-          {% comment %} <img src={% static "assets/img/profile-img.jpg" %} class="img-fluid" alt=""> {% endcomment %}
-          <img src="{{ about.image.url }}" class="img-fluid" alt="">
-        </div>
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          {% comment %} <h3>UI/UX Designer &amp; Web Developer.</h3> {% endcomment %}
-          <h3>{{about.profession}}</h3>
-          <p class="fst-italic">
-            {% comment %} Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. {% endcomment %}
-            {{about.about_you}}
-          </p>
-          <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                {% comment %} <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li> {% endcomment %}
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{about.birthday}}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>{{about.website}}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>{{about.phone}}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{about.city}}</span></li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul>
-                {% comment %} <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> {% endcomment %}
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>{{about.age}}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>{{about.degree}}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>{{about.email}}</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>{{about.freelance}}</span></li>
-              </ul>
-            </div>
+        <div class="row">
+          <div class="col-lg-4" data-aos="fade-right">
+            <img src="{{ about.image.url }}" class="img-fluid" alt="">
           </div>
-          <p>
-            {% comment %} Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores. {% endcomment %}
-            {{about.more_info}}
-          </p>
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+            <h3>{{about.profession}}</h3>
+            <p class="fst-italic">
+              {{about.about_you}}
+            </p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>{{about.birthday}}</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>{{about.website}}</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>{{about.phone}}</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>{{about.city}}</span></li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>{{about.age}}</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>{{about.degree}}</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>{{about.email}}</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>{{about.freelance}}</span></li>
+                </ul>
+              </div>
+            </div>
+            <p>
+              {{about.more_info}}
+            </p>
+          </div>
         </div>
-      </div>
+
 
     </div>
   </section><!-- End About Section -->
@@ -213,7 +211,7 @@
             <img src={% static "assets/img/portfolio/portfolio-1.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-1.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -223,7 +221,7 @@
             <img src={% static "assets/img/portfolio/portfolio-2.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-2.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -233,7 +231,7 @@
             <img src={% static "assets/img/portfolio/portfolio-3.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-3.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -243,7 +241,7 @@
             <img src={% static "assets/img/portfolio/portfolio-4.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-4.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %}  title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %}  title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -253,7 +251,7 @@
             <img src={% static "assets/img/portfolio/portfolio-5.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-5.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -263,7 +261,7 @@
             <img src={% static "assets/img/portfolio/portfolio-6.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-6.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -273,7 +271,7 @@
             <img src={% static "assets/img/portfolio/portfolio-7.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-7.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -283,7 +281,7 @@
             <img src={% static "assets/img/portfolio/portfolio-8.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-8.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
@@ -293,7 +291,7 @@
             <img src={% static "assets/img/portfolio/portfolio-9.jpg" %} class="img-fluid" alt="">
             <div class="portfolio-links">
               <a href={% static "assets/img/portfolio/portfolio-9.jpg" %} data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a>
+              {% comment %} <a href={% url "portfolio_details" %} title="More Details"><i class="bx bx-link"></i></a> {% endcomment %}
             </div>
           </div>
         </div>
