--- a/templates/administration.html
+++ b/templates/administration.html
@@ -10,6 +10,9 @@
     <button type="button" class="btn btn-primary"><a href="/administration/about/edit/{{about.id}}" class="text-light text-decoration-none">Go Edit About</a></button>
     {% comment %} <button type="button" class="btn btn-primary"><a href={% url "edit_about" about.id %} class="text-light text-decoration-none">Go Edit About</a></button> {% endcomment %}
 
+    <h4>Edit Facts</h4>
+    <button type="button" class="btn btn-primary"><a href="/administration/facts/edit/{{facts.id}}" class="text-light text-decoration-none">Go Edit Facts</a></button>
+
 {% comment %}     
     <h4>Edit Skills</h4>
     <button type="button" class="btn btn-primary"><a href={% url "administration_skills" %} class="text-light text-decoration-none">Go Edit Skills</a></button>
