--- a/templates/index.html
+++ b/templates/index.html
@@ -70,53 +70,57 @@
     </div>
   </section><!-- End About Section -->
 
-  <!-- ======= Facts Section ======= -->
-  <section id="facts" class="facts">
-    <div class="container">
-
-      <div class="section-title">
-        <h2>Facts</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+<!-- ======= Facts Section ======= -->
+<section id="facts" class="facts">
+      <div class="container">
+  
+        <div class="section-title">
+          <h2>Facts</h2>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        </div>
+  
+        <div class="row no-gutters">
+  
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
+            <div class="count-box">
+              <i class="bi bi-emoji-smile"></i>
+              {% comment %} <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span> {% endcomment %}
+              <span data-purecounter-start="0" data-purecounter-end={{facts.client_count}} data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Happy Clients</strong> consequuntur quae</p>
+            </div>
+          </div>
+  
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+            <div class="count-box">
+              <i class="bi bi-journal-richtext"></i>
+              {% comment %} <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span> {% endcomment %}
+              <span data-purecounter-start="0" data-purecounter-end={{facts.projects_count}} data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+            </div>
+          </div>
+  
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
+            <div class="count-box">
+              <i class="bi bi-headset"></i>
+              {% comment %} <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span> {% endcomment %}
+              <span data-purecounter-start="0" data-purecounter-end={{facts.support_hours}} data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+            </div>
+          </div>
+  
+          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="count-box">
+              <i class="bi bi-people"></i>
+              {% comment %} <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span> {% endcomment %}
+              <span data-purecounter-start="0" data-purecounter-end={{facts.workers_count}} data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+            </div>
+          </div>
+  
+        </div>
+           
       </div>
-
-      <div class="row no-gutters">
-
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-          <div class="count-box">
-            <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Happy Clients</strong> consequuntur quae</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-          <div class="count-box">
-            <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-          <div class="count-box">
-            <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-          <div class="count-box">
-            <i class="bi bi-people"></i>
-            <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-            <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-  </section><!-- End Facts Section -->
+</section><!-- End Facts Section -->
 
   <!-- ======= Skills Section ======= -->
   <section id="skills" class="skills section-bg">
@@ -129,9 +133,19 @@
 
       <div class="row skills-content">
 
-        <div class="col-lg-6" data-aos="fade-up">
+        {% comment %} <div class="col-lg-6" data-aos="fade-up"> {% endcomment %}
 
+      {% for i in skills %}
           <div class="progress">
+              <span class="skill">{{i.langages}} <i class="val">{{i.percentage}}%</i></span>
+              <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow={{i.percentage}} aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+          </div>
+      {% endfor %}
+
+
+          {% comment %} <div class="progress">
             <span class="skill">HTML <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
@@ -177,7 +191,7 @@
             </div>
           </div>
 
-        </div>
+        </div> {% endcomment %}
 
       </div>
 
