--- a/templates/facts.html
+++ b/templates/facts.html
@@ -63,8 +63,9 @@
           </div>
         </div>
       </div>
+      <button type="submit" class="btn btn-success">Update</button>
+      <button type="button" class="btn btn-secondary"><a href={% url "administration" %} class="text-light text-decoration-none">Back</a></button>
     </div>
-    <button type="submit" class="btn btn-success">Update</button>
   </form>
 </section>
 <!-- End Facts Section -->
