--- a/templates/about.html
+++ b/templates/about.html
@@ -58,7 +58,7 @@
                 <li>
                   <i class="bi bi-chevron-right"></i>
                   <strong>Birthday:</strong>
-                  <input type="date" name="birthday" id="" value="{{about.birthday}}" />
+                  <input type="date" name="birthday" id="" value="{{about.birthday|date:'Y-m-d'}}" />
                 </li>
 
                 <li>
@@ -110,6 +110,7 @@
         </div>
       </div>
       <button type="submit" class="btn btn-success">Update</button>
+      <button type="button" class="btn btn-secondary"><a href={% url "administration" %} class="text-light text-decoration-none">Back</a></button>
     </form>
   </div>
 </section>
