--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,60 @@
-{% extends "base.html" %} {% block content %}
-<h1>contact</h1>
+{% extends "base.html" %} {% block content %} 
+{% comment %} Alert Bootstrap: Message de succès et d'erreur {% endcomment %} 
+{% for message in messages %}
+{% if message.tags == 'success' %}
+    <div class="alert alert-success" role="alert">{{ message }}</div>
+{% elif message.tags == 'error' %}
+    <div class="alert alert-danger" role="alert">{{ message }}</div>
+{% endif %} 
+{% endfor %} 
+<!-- ======= Contact Section ======= -->
+<section id="contact" class="contact">
+  <div class="container">
+    <div class="section-title">
+      <h2>Contact</h2>
+      <p>
+        Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+        aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
+        quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat
+        sit in iste officiis commodi quidem hic quas.
+      </p>
+    </div>
+
+    <form action="" method="POST" enctype="multipart/form-data">
+        {% csrf_token %} 
+
+    <div class="row" data-aos="fade-in">
+      {% comment %} <div class="col-lg-5 d-flex align-items-stretch"> {% endcomment %}
+        <div class="info">
+          <div class="address">
+            <i class="bi bi-geo-alt"></i>
+            <h4>Location:</h4>
+            <input type="text" value="{{contact.location}}" name="location" class="form-control w-100"/>
+          </div>
+
+          <div class="email">
+            <i class="bi bi-envelope"></i>
+            <h4>Email:</h4>
+            <input type="text" value="{{contact.email}}" name="email" class="form-control w-100"/>
+          </div>
+
+          <div class="phone">
+            <i class="bi bi-phone"></i>
+            <h4>Call:</h4>
+            <input type="text" value="{{contact.call}}" name="call" class="form-control w-100"/>
+          </div>
+          <div class="iframe">
+            <i class="bi bi-link-45deg"></i>
+            <h4>URL Location: with google, select "embed a map with iframe":</h4>
+            <input type="text" value="{{ contact.iframe }}" name="iframe" class="form-control w-100"/>
+        </div>
+        {% comment %} </div> {% endcomment %}
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Update</button>
+    <button type="button" class="btn btn-secondary"><a href={% url "administration" %} class="text-light text-decoration-none">Back</a></button>
+  </form>
+  </div>
+</section>
+<!-- End Contact Section -->
 {% endblock content %}
