--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,11 @@
 
   
 <!-- ======= Hero Section ======= -->
-<section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+{% comment %} <section id="hero" class="d-flex flex-column justify-content-center align-items-center"> {% endcomment %}
+{% comment %} Intégrer style avec le contenue du id="hero", ajouter pour les modifs background-image: url('{{ homebackground.image.url }}'); MAIS au début on garde pas celui de base (donc je recopie colle l'img aussi dans static/assets/img (en double pour l'avoir de base ) et donc je l'appel aussi
+ background-image: url('../img/homebackground.jpg'); {% endcomment %}
+{% comment %} <section class="d-flex flex-column justify-content-center align-items-center" style="background-image: url('../img/hero-bg.jpg'); background-position: top center; background-size: cover;"> {% endcomment %}
+<section class="d-flex flex-column justify-content-center align-items-center" style="background-image: url('../img/homebackground.jpg'); background-image: url('{{ homebackground.image.url }}'); background-position: top center; background-size: cover; height: 100vh">
   <div class="hero-container" data-aos="fade-in">
     <h1>{{about.name}}</h1>
 
@@ -408,6 +412,23 @@
       <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
         <div class="swiper-wrapper">
 
+          {% for i in testimonial %}
+          <div class="swiper-slide">
+            <div class="testimonial-item" data-aos="fade-up">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                {{i.comment}}
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              {% comment %} <img src={% static "assets/img/testimonials/testimonials-1.jpg" %} class="testimonial-img" alt=""> {% endcomment %}
+              <img src="{{ i.image.url }}" class="testimonial-img" alt="{{i.name}}">
+              <h3>{{i.name}}</h3>
+              <h4>{{i.job}}</h4>
+            </div>
+          </div>
+          {% endfor %}
+
+{% comment %} 
           <div class="swiper-slide">
             <div class="testimonial-item" data-aos="fade-up">
               <p>
@@ -471,7 +492,7 @@
               <h3>John Larson</h3>
               <h4>Entrepreneur</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div><!-- End testimonial item --> {% endcomment %}
 
         </div>
         <div class="swiper-pagination"></div>
@@ -496,22 +517,22 @@
             <div class="address">
               <i class="bi bi-geo-alt"></i>
               <h4>Location:</h4>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>{{contact.location}}</p>
             </div>
 
             <div class="email">
               <i class="bi bi-envelope"></i>
               <h4>Email:</h4>
-              <p>info@example.com</p>
+              <p>{{contact.email}}</p>
             </div>
 
             <div class="phone">
               <i class="bi bi-phone"></i>
               <h4>Call:</h4>
-              <p>+1 5589 55488 55s</p>
+              <p>{{contact.call}}</p>
             </div>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+            <iframe src="{{contact.iframe}}" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
           </div>
 
         </div>
