--- a/templates/testimonial.html
+++ b/templates/testimonial.html
@@ -1,3 +1,51 @@
 {% extends "base.html" %} {% block content %}
-<h1>testimonial</h1>
+
+<section id="testimonials" class="testimonials">
+  <div class="container">
+    <div class="section-title">
+      <h2>Testimonials</h2>
+      <p>
+        Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
+        aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
+        quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat
+        sit in iste officiis commodi quidem hic quas.
+      </p>
+      <button type="button" class="btn btn-secondary"><a href={% url "administration" %} class="text-light text-decoration-none">Back</a></button>
+    </div>
+
+    <div
+      class="testimonials-slider swiper"
+      data-aos="fade-up"
+      data-aos-delay="100"
+    >
+      <div class="swiper-wrapper">
+        {% for i in testimonial %}
+        <div class="swiper-slide">
+          <div class="testimonial-item" data-aos="fade-up">
+            <p>
+              <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+              {{i.comment}}
+              <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+            </p>
+            {% comment %} <img src={% static
+            "assets/img/testimonials/testimonials-1.jpg" %}
+            class="testimonial-img" alt=""> {% endcomment %}
+            <img
+              src="{{ i.image.url }}"
+              class="testimonial-img"
+              alt="{{i.name}}"
+            />
+            <h3>{{i.name}}</h3>
+            <h4>{{i.job}}</h4>
+            <a href={% url "edit_testimonial" i.id %}  class="text-primary text-decoration-none">✎</a>
+          </div>
+          
+        </div>
+        {% endfor %}
+      </div>
+      <div class="swiper-pagination"></div>
+    </div>
+  </div>
+</section>
+
 {% endblock content %}
